# poekapi

./: .gitignore  pyproject.toml
src/pokeapi/: lambda_function.py
