[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = "Data pipeline for pokeapi"
authors = ["Philip Faurholdt <philip.faurholdt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
boto3 = "^1.22.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
